# FFmpeg_Build4Android

./: .gitignore  README.md  build_ffmpeg.sh  build_openh264.sh  configure
FFmpeg-n4.0.2/libavformat/: Makefile  android_stream_protocol.c  protocols.c  st_media.c
FFmpeg-tool/: CMakeLists.txt  build_ffmpeg_tool.sh  cmdutils.c  config.h
FFmpeg-tool/ffmpeg/include/libavutil/: ffversion.h
FFmpeg-tool/output/arm64-v8a/: ffmpeg_tool
FFmpeg-tool/output/armeabi-v7a/: ffmpeg_tool
FFmpegJNI4Android/: settings.gradle
FFmpegJNI4Android/app/: build.gradle
FFmpegJNI4Android/app/src/androidTest/java/com/alan/ffmpegjni4android/: ExampleInstrumentedTest.java
FFmpegJNI4Android/app/src/main/: AndroidManifest.xml
FFmpegJNI4Android/app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp
FFmpegJNI4Android/app/src/main/cpp/ffmpeg/: ffmpeg.c  ffmpeg.h
FFmpegJNI4Android/app/src/main/java/com/alan/ffmpegjni4android/: MainActivity.java  RuntimePermissionsHelper.java  RuntimePermissionsManager.java
FFmpegJNI4Android/app/src/main/java/com/alan/ffmpegjni4android/protoclos/: IStreamProtocol.java  RuntimePermissionsHelper.java  STFileProtocol.java  STStreamProtocol.java
FFmpegJNI4Android/app/src/main/java/com/alan/ffmpegjni4android/protocols/: AssetStreamProtocol.java  ContentStreamProtocol.java  FileStreamProtocol.java  IStreamProtocol.java  InputStreamProtocol.java  RuntimePermissionsHelper.java  STAssetProtocol.java  STBaseProtocol.java  STBaseStreamProtocol.java  STContentProtocol.java  STFileProtocol.java  STStreamProtocol.java  STStreamProtocolFactory.java  StreamProtocol.java  StreamProtocolFactory.java
FFmpegJNI4Android/app/src/main/res/values/: strings.xml
FFmpegJNI4Android/app/src/test/java/com/alan/ffmpegjni4android/: ExampleUnitTest.java
FFmpegJNI4Android/gradle/wrapper/: gradle-wrapper.properties
FFmpegTool4Android/: settings.gradle
FFmpegTool4Android/app/: build.gradle
FFmpegTool4Android/app/src/androidTest/java/com/alan/ffmpegtool4android/: ExampleInstrumentedTest.java
FFmpegTool4Android/app/src/main/: AndroidManifest.xml
FFmpegTool4Android/app/src/main/java/com/alan/ffmpegtool4android/: MainActivity.java
FFmpegTool4Android/app/src/main/java/com/alan/ffmpegtool4android/utils/: FFmpegTool.java  FileUtils.java  RuntimePermissionsManager.java
FFmpegTool4Android/app/src/main/res/layout/: activity_main.xml
FFmpegTool4Android/app/src/main/res/values/: strings.xml
FFmpegTool4Android/app/src/test/java/com/alan/ffmpegtool4android/: ExampleUnitTest.java
FFmpegTool4Android/gradle/wrapper/: gradle-wrapper.properties
custom_protocol/libavformat/: Makefile  protocols.c  st_media.c  st_media_jni.c
